# solana_centralized_relay

./: Anchor.toml  tsconfig.json
programs/solana_centralized_connection/: Cargo.toml
programs/solana_centralized_connection/src/: lib.rs
programs/solana_centralized_relay/: Cargo.toml
programs/solana_centralized_relay/src/: gptrEFERENCE.rs  lib.rs
tests/: solana_centralized_connection.ts  solana_centralized_relay.ts
